# test-coverage-mcp

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .pylintrc  CHANGELOG.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_DOCKERHUB.md  RELEASE.md  TEST_STRUCTURE.md  codecov.yml  docker-compose.dev.yml  docker-compose.prod.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties
.github/: CODEOWNERS  (+2 more)
test-coverage-mcp/: .coveragerc  .env.example  README.md  pyproject.toml  pytest.ini
test-coverage-mcp-codecov/: .coveragerc  .env.example  README.md  pyproject.toml  pytest.ini
test-coverage-mcp-codecov/src/: __init__.py
test-coverage-mcp-codecov/src/test_coverage_mcp/: __init__.py
test-coverage-mcp-codecov/src/test_coverage_mcp/providers/: __init__.py
test-coverage-mcp-codecov/src/test_coverage_mcp/providers/codecov/: __init__.py  provider.py
test-coverage-mcp-codecov/src/test_coverage_mcp_codecov/: __init__.py  provider.py
test-coverage-mcp-codecov/src/test_coverage_mcp_codecov/api/: __init__.py  client.py  dtos.py
test-coverage-mcp-codecov/src/test_coverage_mcp_codecov/mappers/: __init__.py  mappers.py
test-coverage-mcp-codecov/test/: __init__.py
test-coverage-mcp-codecov/test/unit_test/: __init__.py  test_provider.py
test-coverage-mcp/src/: entry.py
test-coverage-mcp/src/domain/: __init__.py  contracts.py  models.py
test-coverage-mcp/src/integrate/: __init__.py  app.py
test-coverage-mcp/src/mcp/: app.py
test-coverage-mcp/src/mcp/models/: __init__.py
test-coverage-mcp/src/mcp_server/: app.py
test-coverage-mcp/src/mcp_server/models/: __init__.py
test-coverage-mcp/src/mcp_server/models/output/: __init__.py
test-coverage-mcp/src/mcp_server/tools/: __init__.py
test-coverage-mcp/src/models/: __init__.py
test-coverage-mcp/src/registry/: __init__.py  config.py  lifecycle.py
test-coverage-mcp/src/test_coverage_mcp/: __init__.py  _base.py  config.py  entry.py
test-coverage-mcp/src/test_coverage_mcp/cli/: __init__.py  completion.py  doctor.py  main.py  models.py  providers.py  serve.py
test-coverage-mcp/src/test_coverage_mcp/domain/: __init__.py  contracts.py  enums.py  errors.py  models.py
test-coverage-mcp/src/test_coverage_mcp/integrate/: __init__.py  app.py
test-coverage-mcp/src/test_coverage_mcp/mcp_server/: __init__.py  app.py
test-coverage-mcp/src/test_coverage_mcp/mcp_server/models/: __init__.py
test-coverage-mcp/src/test_coverage_mcp/mcp_server/tools/: __init__.py  analyze_pr_risk.py  commit_summary.py  comparison.py  coverage_providers.py  diagnose_coverage_configuration.py  find_low_coverage_files.py  find_untested_code.py  identify_excludable_code_candidates.py  metadata.py  recommend_test_plan.py  register.py  repository_health.py
test-coverage-mcp/src/test_coverage_mcp/registry/: discovery.py  secrets.py
test-coverage-mcp/src/test_coverage_mcp/services/: __init__.py  comparison.py  config_diagnosis.py  config_validation.py  conservative_detection.py  discovery.py  excludable_code.py  gap_discovery.py  health.py  risk_analysis.py  test_recommendation.py  test_scenario_generation.py
test-coverage-mcp/src/test_coverage_mcp/web_server/services/: __init__.py  health_check_service.py
test-coverage-mcp/src/web_server/dependencies/: __init__.py
test-coverage-mcp/src/web_server/models/response/: __init__.py
test-coverage-mcp/src/web_server/services/: __init__.py  health_check_service.py
test-coverage-mcp/test/: TESTING.md
test-coverage-mcp/test/contract_test/: __init__.py  test_provider_contracts.py  test_provider_interface.py
test-coverage-mcp/test/e2e_test/: __init__.py  test_mcp_tools_e2e.py
test-coverage-mcp/test/fixtures/: mock_provider.py
test-coverage-mcp/test/integration_test/: __init__.py  test_health_check_endpoints.py  test_service_integration.py  test_services_integration.py
test-coverage-mcp/test/unit_test/: test_entry.py  test_settings.py
test-coverage-mcp/test/unit_test/cli/: test_cli_commands.py
test-coverage-mcp/test/unit_test/domain/: test_models.py
test-coverage-mcp/test/unit_test/integrate/: test_factory.py
test-coverage-mcp/test/unit_test/mcp/: __init__.py  test_factory.py
test-coverage-mcp/test/unit_test/mcp_server/: test_comparison_tools.py  test_diagnose_config_tool.py  test_excludable_code_tool.py  test_low_coverage_files_tool.py  test_pr_analysis_tools.py  test_recommend_test_plan_tool.py  test_tools.py  test_untested_code_edge_cases.py
test-coverage-mcp/test/unit_test/models/: test_models.py
test-coverage-mcp/test/unit_test/registry/: test_discovery.py  test_registry.py
test-coverage-mcp/test/unit_test/services/: __init__.py  test_comparison.py  test_config_diagnosis.py  test_discovery.py  test_excludable_code.py  test_gap_discovery.py  test_health.py  test_risk_analysis.py  test_test_recommendation.py
test-coverage-mcp/test/unit_test/web_server/: test_factory.py
test-coverage-mcp/test/unit_test/web_server/routers/: test_health_check.py
test-coverage-mcp/test/unit_test/web_server/services/: test_health_check_service.py
test-coverage-mcp/test_coverage_mcp/: config.py
test-coverage-mcp/test_coverage_mcp/integrate/: __init__.py  app.py
test-coverage-mcp/test_coverage_mcp/mcp_server/: __init__.py
test-coverage-mcp/test_coverage_mcp/mcp_server/models/input/: __init__.py
test-coverage-mcp/test_coverage_mcp/mcp_server/models/output/: __init__.py
test-coverage-mcp/test_coverage_mcp/mcp_server/tools/: __init__.py
test-coverage-mcp/test_coverage_mcp/models/: __init__.py
test-coverage-mcp/test_coverage_mcp/registry/: __init__.py  discovery.py  lifecycle.py  registry.py
test-coverage-mcp/test_coverage_mcp/web_server/: __init__.py  app.py
test-coverage-mcp/test_coverage_mcp/web_server/dependencies/: __init__.py
test-coverage-mcp/test_coverage_mcp/web_server/models/: __init__.py
test-coverage-mcp/test_coverage_mcp/web_server/models/request/: __init__.py
test-coverage-mcp/test_coverage_mcp/web_server/routers/: __init__.py
(+161 files in other folders)
