[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-coverage-mcp"
version = "0.0.0"
description = "🔬 A provider-extensible MCP server for test coverage intelligence, with a stable capability-driven tool contract and provider-specific enrichments."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "mcp",
    "mcp-server",
    "template",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Chisanan232/test-coverage-mcp"
Repository = "https://github.com/Chisanan232/test-coverage-mcp"

[project.scripts]
test-coverage-mcp = "src.entry:main"

[project.optional-dependencies]
# MCP core feature set supports SSE/Streamable transports (but doesn't support integrated mode)
mcp = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.7.1",
    "uvicorn>=0.35.0",
    "mcp[cli]>=1.10.1",
    "httpx>=0.27.0",
]

# HTTP server support for webhook features (but doesn't support integrated mode)
webhook = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.7.1",
    "uvicorn>=0.35.0",
]

# Everything supported by this project
all = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "mcp[cli]>=1.10.1",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0,<8",
    "pytest-asyncio>=1.1.0",
    "coverage>=7.10.6",
    "pytest-rerunfailures>=16.0.1",
    "aiohttp>=3.12.15",
    "pytest-asyncio>=1.1.0",
]
pre-commit-ci = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.14",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]
packages = ["src"]
artifacts = ["src/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]
artifacts = ["src/py.typed"]
