[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-coverage-mcp"
version = "0.0.0"
description = "🔬 A provider-extensible MCP server for test coverage intelligence, with a stable capability-driven tool contract and provider-specific enrichments."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "../LICENSE" }
keywords = [
    "test",
    "test-coverage",
    "coverage-report",
    "test-coverage-report",
    "mcp",
    "mcp-server",
    "test-coverage-mcp",
    "test-coverage-mcp-server",
    "provider-extensible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Web server
    "fastapi>=0.128.0",
    # Data type validation as data models
    "pydantic>=2.12.5",
    # Data type validation as data models for settings (e.g., dotenv file)
    "pydantic-settings>=2.12.0",
    # ASGI server
    "uvicorn>=0.40.0",
    # MCP core feature
    "mcp[cli]>=1.26.0",
    # HTTP API client feature
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/Chisanan232/test-coverage-mcp"
Repository = "https://github.com/Chisanan232/test-coverage-mcp"

[project.scripts]
test-coverage-mcp = "test_coverage_mcp.entry:main"

[tool.hatch.build.targets.sdist]
include = ["test_coverage_mcp/"]
packages = ["test_coverage_mcp"]
artifacts = ["test_coverage_mcp/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["test_coverage_mcp/"]
packages = ["test_coverage_mcp"]
artifacts = ["test_coverage_mcp/py.typed"]
